# nuwe-cmadaas-python

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Pipfile  README.md  apiinterface.proto  download.py  pyproject.toml  setup.py  surf.py
example/: README.md  array_2d.py  download.py  filelist.py  grid_array_2d.py  pyproject.toml  save_as_file.py  serialized_str.py
example/music/: array_2d.py  download.py  filelist.py  grid_array_2d.py  save_as_file.py  serialized_str.py
example/nuwe_cmadaas_example/: util.py
example/nuwe_cmadaas_example/music/: array_2d.py  serialized_str.py
example/nuwe_cmadaas_example/music/file_info_search/: file_info_search_download_file.py  file_info_search_file_list.py  file_info_search_serialized_str_html.py  file_info_search_serialized_str_json.py  file_info_search_serialized_str_text.py  file_info_search_serialized_str_xml.py
example/nuwe_cmadaas_example/music/grid_element_point_search/: grid_element_point_search_save_as_file_xml.py  grid_element_point_search_serialized_str_html.py  grid_element_point_search_serialized_str_text.py  grid_element_search_array_2d.py  grid_element_search_save_as_file_html.py  grid_element_search_save_as_file_json.py  grid_element_search_save_as_file_text.py  grid_element_search_serialized_str_json.py  grid_element_search_serialized_str_xml.py
example/nuwe_cmadaas_example/music/grid_element_rect_search/: grid_element_rect_search_grid_array_2d.py  grid_element_rect_search_grid_verctor_2d.py  grid_element_rect_search_save_as_file_html.py  grid_element_rect_search_save_as_file_json.py  grid_element_rect_search_save_as_file_text.py  grid_element_rect_search_save_as_file_xml.py  grid_element_rect_search_serialized_str_html.py  grid_element_rect_search_serialized_str_json.py  grid_element_rect_search_serialized_str_text.py  grid_element_rect_search_serialized_str_xml.py
example/nuwe_cmadaas_example/music/station_element_search/: station_element_search_array_2d.py  station_element_search_save_as_file_html.py  station_element_search_save_as_file_json.py  station_element_search_save_as_file_text.py  station_element_search_save_as_file_xml.py  station_element_search_serialized_str_html.py  station_element_search_serialized_str_json.py  station_element_search_serialized_str_text.py  station_element_search_serialized_str_xml.py
example/query/: array_2d.py  download.py  filelist.py  grid_array_2d.py  save_as_file.py  serialized_str.py
(+119 files in other folders)
