[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nuwe-cmadaas-example"
authors = [
    {name="Wang Dapeng", email="perillaroc@gmail.com"}
]
description = "An example project for nuwe-cmadaas-python."
readme = "README.md"
keywords = ["music", "cmadaas"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    'License :: OSI Approved :: Apache Software License',

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nuwe-cmadaas",
    "click",
    'importlib-metadata; python_version<"3.8"',
]
version = "2024.1"

[project.urls]
Homepage = "https://github.com/perillaroc/nuwe-cmadaas-python"
Repository = "https://github.com/perillaroc/nuwe-cmadaas-python.git"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",
    "*.tests",
    "*.tests.*",
    "tests.*",
    "docs",
    "conf",
]
namespaces = false

[tool.setuptools]
include-package-data = true
